add nsz, pysimplegui-base64-encoder

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
+tabula/
+kamite/
+
 chaiNNer/
 FotoKilof/
 imagepy/
 pLACaudio/
 mkv-muxing-batch-gui/
 mkvtoolnix-batch-tool/
-
-tabula/
-kamite/
+nsz/
+PySimpleGUI-Base64-Encoder/
